# croco

./: croco-stereo-flow-demo.ipynb  demo.py  pretrain.py  pyproject.toml
croco/: croco.py  pos_embed.py
croco_datasets/: pairs_dataset.py
croco_datasets/habitat_sim/: generate_from_metadata.py  generate_multiview_images.py  pack_metadata_files.py
stereoflow/: engine.py  test.py  train.py
