[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "croco"
version = "0.1.1"
description = "CroCo models"
dependencies = []

[tool.setuptools.packages.find]
include = ["croco", "croco.*", "croco_utils", "croco_utils.*", "stereoflow", "stereoflow.*", "croco_datasets", "croco_datasets.*"]
